--- a/pos/templates/pos/clientes_potenciales.html
+++ b/pos/templates/pos/clientes_potenciales.html
@@ -1,6 +1,6 @@
 {% extends 'pos/base.html' %}
 
-{% block title %}Clientes Potenciales - Sistema POS{% endblock %}
+{% block title %}Clientes Potenciales - MegaPos By Megadominio.co{% endblock %}
 
 {% block content %}
 <div class="page-container">
