--- a/pos/templates/pos/crear_producto.html
+++ b/pos/templates/pos/crear_producto.html
@@ -1,6 +1,6 @@
 {% extends 'pos/base.html' %}
 
-{% block title %}Nuevo Producto - Sistema POS{% endblock %}
+{% block title %}Nuevo Producto - MegaPos By Megadominio.co{% endblock %}
 
 {% block content %}
 <div class="page-container">
