--- a/pos/templates/pos/crear_salida.html
+++ b/pos/templates/pos/crear_salida.html
@@ -1,6 +1,6 @@
 {% extends 'pos/base.html' %}
 
-{% block title %}Nueva Salida de Mercancía - Sistema POS{% endblock %}
+{% block title %}Nueva Salida de Mercancía - MegaPos By Megadominio.co{% endblock %}
 
 {% block content %}
 <div class="page-container">
