--- a/pos/templates/pos/crear_usuario.html
+++ b/pos/templates/pos/crear_usuario.html
@@ -1,6 +1,6 @@
 {% extends 'pos/base.html' %}
 
-{% block title %}Nuevo Usuario - Sistema POS{% endblock %}
+{% block title %}Nuevo Usuario - MegaPos By Megadominio.co{% endblock %}
 
 {% block content %}
 <div class="page-container">
@@ -95,4 +95,6 @@
     </div>
 </div>
 {% endblock %}
+
+
 
