--- a/pos/templates/pos/detalle_salida.html
+++ b/pos/templates/pos/detalle_salida.html
@@ -1,6 +1,6 @@
 {% extends 'pos/base.html' %}
 
-{% block title %}Detalle Salida #{{ salida.id }} - Sistema POS{% endblock %}
+{% block title %}Detalle Salida #{{ salida.id }} - MegaPos By Megadominio.co{% endblock %}
 
 {% block content %}
 <div class="page-container">
@@ -76,4 +76,6 @@
     </div>
 </div>
 {% endblock %}
+
+
 
