--- a/pos/templates/pos/formulario_clientes.html
+++ b/pos/templates/pos/formulario_clientes.html
@@ -1,6 +1,6 @@
 {% extends 'pos/base.html' %}
 
-{% block title %}Formulario de Clientes - Sistema POS{% endblock %}
+{% block title %}Formulario de Clientes - MegaPos By Megadominio.co{% endblock %}
 
 {% block content %}
 <div class="page-container">
