--- a/pos/templates/pos/home.html
+++ b/pos/templates/pos/home.html
@@ -1,7 +1,7 @@
 {% extends 'pos/base.html' %}
 {% load humanize %}
 
-{% block title %}Inicio - Sistema POS{% endblock %}
+{% block title %}Inicio - MegaPos By Megadominio.co{% endblock %}
 
 {% block content %}
 <div class="page-container">
