--- a/pos/templates/pos/ingreso_mercancia.html
+++ b/pos/templates/pos/ingreso_mercancia.html
@@ -1,7 +1,7 @@
 {% extends 'pos/base.html' %}
 {% load humanize %}
 
-{% block title %}Ingreso de Mercancía - Sistema POS{% endblock %}
+{% block title %}Ingreso de Mercancía - MegaPos By Megadominio.co{% endblock %}
 
 {% block content %}
 <div class="page-container">
