--- a/pos/templates/pos/inventario.html
+++ b/pos/templates/pos/inventario.html
@@ -1,7 +1,7 @@
 {% extends 'pos/base.html' %}
 {% load humanize %}
 
-{% block title %}Inventario - Sistema POS{% endblock %}
+{% block title %}Inventario - MegaPos By Megadominio.co{% endblock %}
 
 {% block content %}
 <div class="page-container">
