--- a/pos/templates/pos/usuarios.html
+++ b/pos/templates/pos/usuarios.html
@@ -1,6 +1,6 @@
 {% extends 'pos/base.html' %}
 
-{% block title %}Usuarios - Sistema POS{% endblock %}
+{% block title %}Usuarios - MegaPos By Megadominio.co{% endblock %}
 
 {% block content %}
 <div class="page-container">
