--- a/pos/templates/pos/detalle_ingreso.html
+++ b/pos/templates/pos/detalle_ingreso.html
@@ -1,7 +1,7 @@
 {% extends 'pos/base.html' %}
 {% load humanize %}
 
-{% block title %}Detalle Ingreso #{{ ingreso.id }} - Sistema POS{% endblock %}
+{% block title %}Detalle Ingreso #{{ ingreso.id }} - MegaPos By Megadominio.co{% endblock %}
 
 {% block content %}
 <div class="page-container">
