--- a/pos/templates/pos/editar_usuario.html
+++ b/pos/templates/pos/editar_usuario.html
@@ -1,6 +1,6 @@
 {% extends 'pos/base.html' %}
 
-{% block title %}Editar Usuario - Sistema POS{% endblock %}
+{% block title %}Editar Usuario - MegaPos By Megadominio.co{% endblock %}
 
 {% block content %}
 <div class="page-container">
@@ -92,4 +92,6 @@
     </div>
 </div>
 {% endblock %}
+
+
 
