--- a/pos/templates/pos/salida_mercancia.html
+++ b/pos/templates/pos/salida_mercancia.html
@@ -1,6 +1,6 @@
 {% extends 'pos/base.html' %}
 
-{% block title %}Salida de Mercancía - Sistema POS{% endblock %}
+{% block title %}Salida de Mercancía - MegaPos By Megadominio.co{% endblock %}
 
 {% block content %}
 <div class="page-container">
